--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -2,6 +2,7 @@
 {% load record %}
 {% load invites %}
 {% load dated_static %}
+{% load thumbnail %}
 
 {% block extralinks %}
     {% if group.slug %}
@@ -9,93 +10,16 @@
     {% endif %}
 {% endblock %}
 
-{% block left_sidebar %}
-    {% if group.is_joinable and not is_member and not membership_pending %}
-        <a class="button" href="{% url group_join group.id %}">Join Team</a>
-    {% endif %}
-    {% if membership_pending %}
-        <span class="membership_status">Your membership status is currently <b>pending</b>.</span>
-    {% endif %}
-    
-    {% if requesters %}
-        <h2>Membership Requests</h2>
-        <ul>
-            {% for requester in requesters %}
-                <li class="membership_request">
-                    {% safe_user_link requester %} would like to join
-                    <div class="membership_tools">
-                        <a href="{% url group_approve group.id requester.id %}">Approve</a> or 
-                        <a href="{% url group_deny group.id requester.id %}">Deny</a>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% if is_member %}
-        <h2>Magnify your Impact</h2>
-        {% activity_by_slug mag_invite_friend as invite_friend_act %}
-        <p>
-            <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend to this team</a>
-            (+{{ invite_friend_act.points }} points)
-        </p>
-        <div id='invite_friend_dialog'>
-            {% get_invite_form for group %}
-        </div>
-    {% endif %}
-    <div id="group_activity" class="group_section">
-        {% if group_records %}
-            <h2>Team Activity
-                {% if group.slug %}
-                    <a class="atom_link" href="{% url group_activity_feed group.slug %}">
-                        <img src="{% dated_static 'images/theme/rss.png' %}" alt="atom feed" />
-                    </a>
-                {% endif %}
-            </h2>
-            {% for record in group_records %}
-                {% render_record record %}
-            {% endfor %}
-        {% endif %}
-    </div>
-{% endblock %}
-
 {% block right_content %}
-    <div id="breadcrumbs">
-        <a href="{% url index %}">Home</a> &rsaquo;
-        <a href="{% url group_list %}">Teams</a> &rsaquo;
-        {{group.name}}
-    </div>
-    <div id="group_header" class="group_section">
-        {% include "groups/_group_header.html" %}
-    </div>
-    
-    <div id="group_info" class="group_section">
-        <div id="popular_actions">
-            {% if popular_actions %}
-                <h2>Popular Actions</h2>
-                <ol>
-                {% for action in popular_actions %}
-                    <li><a href="{% url action_detail action.slug %}">{{ action }}</a> ({{ action.completes_in_group }} member{{ action.completes_in_group|pluralize }})</li>
-                {% endfor %}
-                </ol>
-            {% endif %}
+<div class="grid_6 alpha">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <div id="breadcrumbs">
+            <a href="{% url index %}">Home</a> &rsaquo;
+            <a href="{% url group_list %}">Teams</a> &rsaquo;
+            {{group.name}}
         </div>
-        <div id="top_members">
-            {% if top_members %}
-                <h2>Top Members</h2>
-                <ol>
-                {% for user in top_members %}
-                    {% if forloop.counter0 < 3 %}
-                        <li>{% safe_user_link user %} ({{ user.get_profile.total_points }} points)</li>
-                    {% endif %}
-                {% endfor %}
-                </ol>
-            {% endif %}
-        </div>
-        <br class="clear" />
-    </div>
-    
-    
-    <div id="group_charts" class="group_section">
+        <h1>{{group.name}}</h1>
         <table class="tablesorter">
             <thead>
                 <tr>
@@ -119,8 +43,11 @@
             </tbody>
         </table>
     </div>
-
-	{% if not group.is_geo_group %}
+    <div class="box_two_bottom"></div>
+    
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        {% if not group.is_geo_group %}
         <div id="group_discussion_list" class="group_section">
         	<h2>Discussions</h2>
         	{% if discs %}
@@ -133,10 +60,103 @@
     			{% include "groups/_group_disc_list.html" %}
     		{% endif %}
     		{% if is_poster %}
-    			<a class="button" href="{% url group_disc_create group.slug %}">Start new discussion</a>
+    			<a href="{% url group_disc_create group.slug %}">Start new discussion</a>
     		{% endif %}
         </div>
-	{% endif %}
+    	{% endif %}
+    </div>
+    <div class="box_two_bottom"></div>
+    
+    {% if group_records %}
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <h2>Team Activity
+            {% if group.slug %}
+                <a class="atom_link" href="{% url group_activity_feed group.slug %}">
+                    <img src="{% dated_static 'images/theme/rss.png' %}" alt="atom feed" />
+                </a>
+            {% endif %}
+        </h2>
+        {% for record in group_records %}
+            {% render_record record %}
+        {% endfor %}
+    </div>
+    <div class="box_two_bottom"></div>
+    {% endif %}
+</div>
+<div class="grid_3 omega">
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <img src="{% thumbnail group.safe_image 45x38 crop='smart' %}" alt="group image" height="100" width="183" />
+        <div>{{ group.description|linebreaks }}</div>
+        <p>
+            {% if is_manager %}
+                <a href="{% url group_edit group.slug %}">Edit Team</a><br/>
+            {% endif %}
+            {% if group.is_joinable and is_member %}
+                <a href="{% url group_leave group.id %}">Leave Team</a>
+            {% endif %}
+            {% if group.is_joinable and not is_member and not membership_pending %}
+                <a class="button" href="{% url group_join group.id %}">Join Team</a>
+            {% endif %}
+            {% if membership_pending %}
+                <p>Your membership status is currently <b>pending</b>.</p>
+            {% endif %}
+        </p>
+    </div>
+    <div class="box_one_bottom"></div>
+    
+    {% if requesters %}
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Membership Requests</h3>
+        <ul>
+            {% for requester in requesters %}
+                <li class="membership_request">
+                    {% safe_user_link requester %} would like to join
+                    <div class="membership_tools">
+                        <a href="{% url group_approve group.id requester.id %}">Approve</a> or 
+                        <a href="{% url group_deny group.id requester.id %}">Deny</a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="box_one_bottom"></div>
+    {% endif %}
+    
+    {% if is_member %}
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Magnify your Impact</h3>
+        {% activity_by_slug mag_invite_friend as invite_friend_act %}
+        <p>
+            <a href='{% url invite-invite %}' class='invite_friend_link'>Invite a friend to this team</a>
+            (+{{ invite_friend_act.points }} points)
+        </p>
+        <div id='invite_friend_dialog'>
+            {% get_invite_form for group %}
+        </div>
+    </div>
+    <div class="box_one_bottom"></div>
+    {% endif %}
+    
+    {% if popular_actions %}
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        <h3>Popular Actions</h3>
+        <ol>
+        {% for action in popular_actions %}
+            <li>
+                <a href="{% url action_detail action.slug %}">{{ action }}</a><br/>
+                <span class="smaller">{{ action.completes_in_group }} member{{ action.completes_in_group|pluralize }}</span>
+            </li>
+        {% endfor %}
+        </ol>
+    </div>
+    <div class="box_one_bottom"></div>
+    {% endif %}
+</div>
 {% endblock %}
 
 {% block js %}page_group_detail{% endblock %}
