a user can now edit an event [completed: 292]

--- a/events/templates/events/edit.html
+++ b/events/templates/events/edit.html
@@ -1,5 +1,5 @@
 {% extends "events/_form.html" %}
 
 {% block submit_button %}
-    <input type="submit" value="Create Event" />
+    <input type="submit" value="Edit Event" />
 {% endblock %}
