--- a/events/templates/events/_form.html
+++ b/events/templates/events/_form.html
@@ -1,5 +1,11 @@
-<form name="event_create" action="" method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <input type="submit" value="Create Event" />
-</form>
+{% extends "events/base.html" %}
+
+{% block right_content %}
+    <form id="event_form" action="" method="post">
+        {{ form.as_p }}
+        {% csrf_token %}
+        {% block submit_button %}
+            <input type="submit" value="Submit" />
+        {% endblock %}
+    </form>
+{% endblock %}
