Styled blog Added two new action header images and 10 new action thumb images

--- a/groups/templates/groups/_group_nugget_list.html
+++ b/groups/templates/groups/_group_nugget_list.html
@@ -7,7 +7,7 @@
 			</a>
 			<div class="group_list_name">
 				<a href="{{ group.get_absolute_url }}">{{ group.name }}</a>
-				<div>
+				<div class="smaller">
 					{{ group.member_count }} members
 				</div>
 			</div>
