--- a/groups/templates/groups/_group_disc_list.html
+++ b/groups/templates/groups/_group_disc_list.html
@@ -1,18 +1,12 @@
 {% for disc in discs %}
 {% if disc.is_public or is_manager or disc.user.id == user.id %}
-	<h2><a href="{% url group_disc_detail group.slug,disc.id %}">{{disc.subject}}</a></h2>
-	<div>Posted by {% safe_user_link disc.user %} on {{disc.created}}</div>
-	<div>
-		{% if disc.reply_count %}
-			{% ifequal disc.reply_count 1 %}
-				1 reply
-			{% else %}
-				{{disc.reply_count}} replies
-			{% endifequal %}
-		{% else %}
-			0 replies
-		{% endif %}
-	</div>
-	<br/>
+	<p>
+    	<b>
+    	    <a href="{% url group_disc_detail group.slug,disc.id %}">{{disc.subject}}</a>
+    	    <span class="group_disc_reply_count">{{disc.reply_count}} repl{{disc.reply_count|pluralize:"y,ies"}}</span>
+    	</b>
+    	<br/>
+    	<span class="smaller">Posted by {% safe_user_link disc.user %} at {{disc.created|date:"TIME_FORMAT"}} on {{disc.created|date:"DATE_FORMAT"}}</span>
+	</p>
 {% endif %}
 {% endfor %}
