--- a/groups/templates/groups/group_disc_detail.html
+++ b/groups/templates/groups/group_disc_detail.html
@@ -1,23 +1,34 @@
 {% extends "rah/base.html" %}
 {% block right_content %}
-    <div id="breadcrumbs">
-        <a href="{% url index %}">Home</a> &rsaquo;
-        <a href="{% url group_list %}">Teams</a> &rsaquo;
-        <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
-        <a href="{% url group_disc_list group.slug %}">Discussions</a> &rsaquo;
-        {{ disc.subject }}
-    </div>
-    <h2>{{disc.subject}}</h2>
-    {% include "groups/_group_disc_nugget.html" %}
-    {% for disc in discs %}
-        {% include "groups/_group_disc_nugget.html" %}
-    {% endfor %}
-    {% if is_poster %}
-        {% include "groups/_group_disc_create_form.html" %}
-    {% else %}
-        {% if group.is_joinable %}
-            You must be a member of this group to post discussions. 
-            <a class="button" href="{% url group_join group.id %}">Join Team</a>
+    <div class="grid_9 alpha">
+        <div class="box_three_top"></div>
+        <div class="box_three_middle">
+            <p id="breadcrumbs">
+                <a href="{% url index %}">Home</a> &rsaquo;
+                <a href="{% url group_list %}">Teams</a> &rsaquo;
+                <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
+                <a href="{% url group_disc_list group.slug %}">Discussions</a> &rsaquo;
+                {{ disc.subject }}
+            </p>
+            <h1>{{disc.subject}}</h1>
+            <p>
+    			<em>Posted by {% safe_user_link disc.user %} on {{ disc.created|date:"DATETIME_FORMAT" }}</em>
+    		</p>
+            {{disc.body|linebreaks}}
+        </div>
+        <div class="box_three_bottom"></div>
+        {% for disc in discs %}
+            <h2>Responses</h2>
+            {% include "groups/_group_disc_nugget.html" %}
+        {% endfor %}
+        {% if is_poster %}
+            <h2>Post a new response</h2>
+            {% include "groups/_group_disc_create_form.html" %}
+        {% else %}
+            {% if group.is_joinable %}
+                You must be a member of this group to post discussions. 
+                <a class="button" href="{% url group_join group.id %}">Join Team</a>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
 {% endblock %}
