--- a/groups/templates/groups/group_disc_list.html
+++ b/groups/templates/groups/group_disc_list.html
@@ -1,25 +1,36 @@
 {% extends "rah/base.html" %}
 {% block right_content %}
-    <div id="breadcrumbs">
-        <a href="{% url index %}">Home</a> &rsaquo;
-        <a href="{% url group_list %}">Teams</a> &rsaquo;
-        <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
-        Discussions
+<div class="grid_6 alpha">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <p id="breadcrumbs">
+            <a href="{% url index %}">Home</a> &rsaquo;
+            <a href="{% url group_list %}">Teams</a> &rsaquo;
+            <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
+            Discussions
+        </p>
+        <h1>Discussions</h1>
+        {% with discs.object_list as discs %}
+            {% include "groups/_group_disc_list.html" %}
+        {% endwith %}
+        {% with discs as paginator %}
+            {% include "paginators/item_paginator.html" %}
+        {% endwith %}
     </div>
-    <h2>Discussions</h2>
-    {% with discs.object_list as discs %}
-        {% include "groups/_group_disc_list.html" %}
-    {% endwith %}
-    {% with discs as paginator %}
-        {% include "paginators/item_paginator.html" %}
-    {% endwith %}
-
-    {% if is_poster %}
-        <a href="{% url group_disc_create group.slug %}">Start new discussion</a>
-    {% else %}
-        {% if group.is_joinable %}
-            You must be a member of this team to post discussions. 
-            <a class="button" href="{% url group_join group.id %}">Join Team</a>
+    <div class="box_two_bottom"></div>
+</div>
+<div class="grid_3 omega">
+    <div class="box_one_top"></div>
+    <div class="box_one_middle">
+        {% if is_poster %}
+            <a href="{% url group_disc_create group.slug %}" class="button">New discussion</a>
+        {% else %}
+            {% if group.is_joinable %}
+                You must be a member of this team to post discussions. 
+                <a class="button" href="{% url group_join group.id %}">Join Team</a>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
+    <div class="box_one_bottom"></div>
+</div>
 {% endblock %}
